--- a/shapes.html
+++ b/shapes.html
@@ -6,5 +6,6 @@
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            background: black;            
+            background: black;
+<src="Free-Printable-Circle-Shape.jpg">
 "></div>
