--- a/shapes.html
+++ b/shapes.html
@@ -1,11 +1,19 @@
-<div style="
-           z-index: 5;
-            position: absolute;
-            left: 100px;
-            top: 200px;
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            background: black;
-<src="Free-Printable-Circle-Shape.jpg">
-"></div>
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    #circle {
+      width: 50px;
+      height: 50px;
+      -webkit-border-radius: 25px;
+      -moz-border-radius: 25px;
+      border-radius: 25px;
+      background: blue;
+    }
+  </style>
+<head>
+  <body>
+    <div id="circle"></div>
+  </body>
+  </html>
+ 
