--- a/shapes.html
+++ b/shapes.html
@@ -4,6 +4,8 @@
             left: 100px;
             top: 200px;
             width: 100px;
+            height: 100px;
             border-radius: 50%;
             background: black>
-            "</div>
+            "></div>
+<img src="Free-Printable-Circle-Shape.jpg">
