--- a/shapes.html
+++ b/shapes.html
@@ -8,4 +8,4 @@
             border-radius: 50%;
             background: black>
             "></div>
-<img src="Free-Printable-Circle-Shape.jpg">
+<img src="circle.png">
