--- a/shapes.html
+++ b/shapes.html
@@ -1,11 +1,11 @@
 <div style="
             z-index: 5;
             position: absolute
-            left: 100px;
-            top: 200px;
-            width: 100px;
-            height: 100px;
+            left: 300px;
+            top: 300px;
+            width: 400px;
+            height: 400px;
             border-radius: 50%;
-            background: black>
+            background: white>
             "></div>
 <img src="circle.png">
